tests/ui/substrate/implementation/fail_incorrect_weight_call.stderr
error: expected literal
  --> tests/ui/substrate/implementation/fail_incorrect_weight_call.rs:19:30
   |
19 |     #[obce(weight(dispatch = crate::test_pallet::Pallet::<T>::test_method))]
   |                              ^^^^^
